<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Binario_Decimal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="600dp">

            <TextView
                android:id="@+id/textViewTitle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="cursive"
                android:text="@string/binario_decimal"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="46dp" />

            <EditText
                android:id="@+id/editTextBin_Dec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitle3"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/digite_um_numero"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="74dp" />

            <Button
                android:id="@+id/BtnConverter_Bin_Dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextBin_Dec"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:onClick="Converter"
                android:text="@string/converter" />

            <TextView
                android:id="@+id/resultBin_Dec"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_below="@id/BtnConverter_Bin_Dec"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="36sp" />

            <ImageButton
                android:id="@+id/BtnVoltar3"
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:background="@mipmap/voltar"
                android:onClick="Voltar" />
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>